Configure JVM for Bonita Studio (#674)
As Bonita Studio only support Java 8 and as Java 11 start to be popular and more widely used it is important to explain how to choose the JVM to use.

Close BST-63